<resources>
    <string name="app_name">SritharApp</string>
    <string name="textview">TextView</string>
    <string name="enter_the_first_number">Enter The First Number</string>
    <string name="here_s_your_answer">Here\'s Your Answer</string>
    <string name="add">Add</string>
    <string name="enter_the_second_number">Enter The Second Number</string>
    <string name="click_me_to_type">Click Me To Type</string>
    <string name="by">By,</string>
</resources>
