<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a0d9c8"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mul"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="82dp"
        android:layout_height="37dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="33dp"
        android:onClick="mul"
        android:text="MUL"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/div"
        app:layout_constraintStart_toEndOf="@+id/tv4"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <Button
        android:id="@+id/div"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="82dp"
        android:layout_height="37dp"
        android:layout_marginEnd="42dp"
        android:onClick="div"
        android:text="DIV"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub" />

    <Button
        android:id="@+id/sub"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="82dp"
        android:layout_height="37dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="10dp"
        android:onClick="sub"
        android:text="SUB"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et2" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/click_me_to_type"
        android:inputType="number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv2"
        app:layout_constraintTop_toBottomOf="@+id/et1" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="169dp"
        android:layout_height="34dp"
        android:layout_marginEnd="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/enter_the_first_number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/et1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="169dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/enter_the_second_number"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="142dp"
        android:layout_height="39dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Click Me to Type"
        android:inputType="number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="82dp"
        android:layout_height="37dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="8dp"
        android:onClick="add"
        android:text="@string/add"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/sub"
        app:layout_constraintStart_toEndOf="@+id/tv4"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="106dp"
        android:layout_height="42dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="20dp"
        android:text="Answer"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="264dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/min"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="67dp"
        android:layout_height="34dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/by"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv4"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/social"
        android:layout_width="102dp"
        android:layout_height="37dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="10dp"
        android:text="CLICK Me"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/div"
        tools:backgroundTint="@android:color/holo_orange_light" />

</android.support.constraint.ConstraintLayout>